gcc/testsuite/g++.dg/parse/error7.C
// PR c++/12827

void f(int x
       int y); // { dg-error "," }
